Fix bug where project tiles are small on small devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -423,7 +423,7 @@ a:visited {
 }
 
 .project-article {
-    flex: 1;
+    flex: 1 1 20rem;
     background-color: var(--primary-colour);
     line-height: 1.5;
     border-radius: 0.5rem;
